--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,19 +14,19 @@ jobs:
     name: release linux/amd64
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v3.5.2
     - name: compile and release
       uses: ngs/go-release.action@v1.0.2
       env:
         GOARCH: amd64
         GOOS: linux
-  release-linux-arm64:
-    name: release linux/arm64
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@master
-    - name: compile and release
-      uses: ngs/go-release.action@v1.0.2
-      env:
-        GOARCH: arm64
-        GOOS: linux
+#   release-linux-arm64:
+#     name: release linux/arm64
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/checkout@v3.5.2
+#     - name: compile and release
+#       uses: ngs/go-release.action@v1.0.2
+#       env:
+#         GOARCH: arm64
+#         GOOS: linux
