--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
     - name: compile and release
       uses: ngs/go-release.action@v1.0.2
       env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GOARCH: amd64
         GOOS: linux
 #   release-linux-arm64:
