--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GOARCH: amd64
         GOOS: linux
+        EXTRA_FILES: "LICENSE"
 #   release-linux-arm64:
 #     name: release linux/arm64
 #     runs-on: ubuntu-latest
