--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,13 +3,17 @@ on:
     types: [created]
 
 jobs:
-  release-linux-amd64:
-    name: release linux/amd64
+  releases-matrix:
+    name: Release Go Binary
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        goarch: [amd64, arm64]
     steps:
     - uses: actions/checkout@v3
     - uses: wangyoucao577/go-release-action@v1.37
       with:
         github_token: ${{ secrets.GO_TOKEN }}
         goos: linux
-        goarch: amd64
+        goarch: ${{ matrix.goarch }}
+        extra_files: README.md
